# NxAira

./: .gitignore
NxAiraPlugin/: CMakeLists.txt  bonly-release.bat  build-debug.bat  build-release.bat  build.bat  follow.bat  rebuild-debug.bat  rebuild-release.bat  rebuild.bat  rebuild.sh  start.bat  stop.bat
NxAiraPlugin/bak/: device_agent.cpp  device_agent.h  device_agent_manifest.h
NxAiraPlugin/src/fwd/: spdlog.h
NxAiraPlugin/src/lib/: HTTPRequest.hpp
NxAiraPlugin/src/nx/vms_server_plugins/analytics/sample/: device_agent.cpp  device_agent.h  device_agent_manifest.h  engine.cpp  engine.h  engine_manifest.h  ini.cpp  ini.h  plugin.cpp  plugin.h  settings_model.h
NxAiraPlugin/src/nx/vms_server_plugins/analytics/sample/DeviceAgentHelper/: device_agent_motion_face_provider.cpp  device_agent_motion_face_provider.h  frame.cpp  frame.h
NxAiraPlugin/src/val/: AiraFaceServer.cpp  AiraFaceServer.hpp  ValBase64.cpp  ValBase64.hpp  ValueHolder.h  result.cpp  result.h  util.cpp  util.h
Shortcuts/: NX Ini.lnk  NX Log.lnk  NX Plugins.lnk  Val Built Plugins.lnk
sample_analytics_plugin/: CMakeLists.txt
